<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Protocol Benchmarker</string>
    <string name="start">Start</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="stop">Stop</string>
    <string name="prefs">Preferences</string>
    <string name="time_active">Time active</string>
    <string name="location">Location</string>
    <string name="network_information">Network information</string>
    <string name="activity_log">Activity Log</string>

    <string name="title_host">Host</string>
    <string name="summary_host">Backend server hostname or IP address</string>
    <string name="host">PROTOCOL_BENCHMARKER_HOST</string>

    <string name="title_port">Port</string>
    <string name="summary_port">Backend server port</string>
    <string name="port">PROTOCOL_BENCHMARKER_PORT</string>

    <string name="title_username">Username</string>
    <string name="summary_username">Backend server username</string>
    <string name="username">PROTOCOL_BENCHMARKER_USERNAME</string>

    <string name="title_password">Password</string>
    <string name="summary_password">Backend server password</string>
    <string name="password">PROTOCOL_BENCHMARKER_PASSWORD</string>
</resources>
